# sokobo

./: .gitignore  .swp  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  algorithms.html  algorithms.js  annotated.html  annotated_dup.js  calculus_8cpp_source.html  calculus_8h_source.html  classBinaryOp-members.html  classBinaryOp.html  classCAS__CLI-members.html  classCAS__CLI.html  classCalculus-members.html  classCalculus.html  classComplexNumber-members.html  classComplexNumber.html  classConstant-members.html  classConstant.html  classDifferentialEquations-members.html  classDifferentialEquations.html  classExpression-members.html  classExpression.html  classFourierTransform-members.html  classFourierTransform.html  classFunction-members.html  classFunction.html  classLaplaceTransform-members.html  classLaplaceTransform.html  classMatrix-members.html  classMatrix.html  classMatrix.js  classNumericalMethods-members.html  classNumericalMethods.html  classPolynomial-members.html  (+74 more)
.github/workflows/: doxygen.yml  linux.yml  macos.yml  windows.yml
benchmark/matrix/: matrix_inverse.cpp  matrix_transpose.cpp
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/: mainpage.dox
docs/algorithms/: integration.dox  interpolation.dox  lanczos.dox  ode_solvers.dox  optimization.dox  pde_solvers.dox
docs/html/: _formulas.tex  annotated.html  annotated_dup.js  class_binary_op-members.html  class_c_a_s___c_l_i.html  class_calculus.html  class_complex_number-members.html  class_constant-members.html  class_differential_equations.html  class_expression-members.html  class_fourier_transform.html  class_function-members.html  class_laplace_transform-members.html  class_laplace_transform.html  class_polynomial.html  class_variable.html  classconanfile_1_1_recipe.html  complex__number_8cpp_source.html  differential__equations_8cpp_source.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  doxygen_crawl.html  expression_8cpp_source.html  expression_8h_source.html  fourier_8cpp_source.html  hierarchy.html  index.html  laplace_8h_source.html  matrix_8cpp_source.html  md__b_u_i_l_d_i_n_g.html  md__c_o_d_e___o_f___c_o_n_d_u_c_t.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  numerical__methods_8cpp_source.html  numerical__methods_8h_source.html  polynomial_8h_source.html
docs/latex/: annotated.tex  class_binary_op.tex  class_c_a_s___c_l_i.tex  class_complex_number.tex  class_constant.eps  class_constant.tex  class_expression.tex  class_function.tex  class_numerical_methods.tex  class_polynomial.tex  class_variable.eps  classconanfile_1_1_recipe.eps  differential__equations_8h_source.tex  files.tex  fourier_8cpp_source.tex  fourier_8h_source.tex  laplace_8h_source.tex  matrix_8cpp_source.tex  md__c_o_d_e___o_f___c_o_n_d_u_c_t.tex  md__c_o_n_t_r_i_b_u_t_i_n_g.tex  md__h_a_c_k_i_n_g.tex  md_source_2index.tex  vector_8h_source.tex
docs/modules/: calculus.dox  complex.dox  matrix.dox  numerical.dox  polynomial.dox
docs/pages/: algorithms.dox  cli.dox  examples.dox  getting_started.dox
doxygen_docs/html/: _formulas_dark.tex  calculus_8cpp_source.html  calculus_8h_source.html  class_calculus-members.html  (+40 more)
scripts/: matrix_determinant_test.bat  matrix_inverse_test.bat  matrix_test.bat  matrix_transpose_test.bat  transpose_matrix_test.bat
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  groups_0.js  (+15 more)
source/: calculus.cpp  cli.cpp  complex_number.cpp  differential_equations.cpp  expression.cpp  fourier.cpp  laplace.cpp  lib.cpp  main.cpp  matrix.cpp  numerical_methods.cpp  polynomial.cpp  vector.cpp
test/: CMakeLists.txt  matrix_test.cpp  utils.h
test/matrix/: eigenvector_no_symmetric_test.cpp  eigenvector_symmetric_test.cpp  matrix_determinant_test.cpp  matrix_inverse_test.cpp  matrix_test.cpp  matrix_transpose_test.cpp  utils.h
test/source/: sokobo_test.cpp
(+116 files in other folders)
